fixed navbar spacing issue

--- a/src/components/CustomNavbar/navbar.css
+++ b/src/components/CustomNavbar/navbar.css
@@ -71,6 +71,10 @@
         justify-content: flex-end;
         margin-top: 10px;
     } */
+    .main-nav li {
+        margin: 0;
+        margin-right:30px;
+    }
     #js-menu {
         display: flex;
         list-style-type: none;
@@ -79,10 +83,6 @@
         justify-content: flex-end;
         margin-top: 10px;
     }
-    .main-nav li {
-        margin: 0;
-    }
-
     .nav-links {
         margin-left: 40px;
         color:rgba(42, 42, 42, 0.877)
